Title and toggle fixed; text overlap fix pending

--- a/htmlFrames/style_resultFrame.css
+++ b/htmlFrames/style_resultFrame.css
@@ -162,12 +162,25 @@ tr:hover {
   font-size: small;
   width: 60px;
   color: #000;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 1;
+  top: 70%;
+  right: 90%;
+}
+
+#tab4 .tab4text {
+  visibility: hidden;
+  font-size: small;
+  width: 60px;
+  color: #000;
   border-radius: 6px;
   position: absolute;
   z-index: 1;
   top: 70%;
   right: 90%;
 }
+
 
 
 
@@ -198,6 +211,14 @@ tr:hover {
 */
 
  #tab3:hover .tab3text {
+  visibility: visible;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  position: static;
+  top: 19%;
+  left: 23.5%;
+}
+
+#tab4:hover .tab4text {
   visibility: visible;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   position: static;
